all SIDs: CAL (tmp)

--- a/JUICE-CDF-HF-SID2_sample.ipynb
+++ b/JUICE-CDF-HF-SID2_sample.ipynb
@@ -5,7 +5,7 @@
    "id": "5ad0cc98",
    "metadata": {},
    "source": [
-    "# JUICE RPWI HF SID2 (RAW): L1a QL -- 2024/8/17"
+    "# JUICE RPWI HF SID2 (RAW): L1a QL -- 2024/8/18"
    ]
   },
   {
@@ -29,8 +29,8 @@
     "import datetime\n",
     "import glob\n",
     "import math\n",
-    "import matplotlib.pyplot as plt\n",
     "import matplotlib.colors as colors\n",
+    "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
     "import sys"
    ]
@@ -58,10 +58,10 @@
     "\n",
     "# *** Library ***\n",
     "sys.path.append('./lib/')\n",
-    "import juice_cal_lib   as juice_cal\n",
-    "import juice_cdf_lib   as juice_cdf\n",
-    "import juice_sid2_lib  as juice_sid2\n",
-    "import juice_spec_lib  as juice_spec"
+    "import juice_cal_lib  as juice_cal\n",
+    "import juice_cdf_lib  as juice_cdf\n",
+    "import juice_sid2_lib as juice_sid2\n",
+    "import juice_spec_lib as juice_spec"
    ]
   },
   {
@@ -264,8 +264,7 @@
    "source": [
     "# *** Group read\n",
     "\"\"\"\n",
-    "import glob\n",
-    "data_dir = '/Users/user/0-python/JUICE_data/test-CCSDS/sample/cdf/'        # CDF data folder\n",
+    "data_dir = '/Users/user/0-python/JUICE_data/test-CCSDS/sample/cdf/'\n",
     "data_name = 'SID02*.cdf'\n",
     "cdf_file = data_dir + data_name\n",
     "data_name_list = glob.glob(cdf_file)\n",
@@ -463,7 +462,6 @@
     "ylim=[-10**(p_max), 10**(p_max)]; ax1.set_ylim(ylim);  ax2.set_ylim(ylim);  ax3.set_ylim(ylim)\n",
     "ylim=[f_min, f_max]; ax4.set_ylim(ylim)\n",
     "\n",
-    "# Plot\n",
     "fig.subplots_adjust(hspace=0)\n",
     "fig.show\n",
     "if dump_mode == 1:\n",
@@ -531,7 +529,6 @@
    "outputs": [],
    "source": [
     "spec = juice_spec.hf_getspec_sid2(data, cal_mode)                       # Wave -> Spectrum\n",
-    "\n",
     "Epoch_1d  = spec.epoch.tolist();    n_time1 = spec.EuEu.shape[0];  num_1d = np.arange(n_time1)\n",
     "freq_1d   = spec.freq[n_time1//2];  n_freq0 = freq_1d.shape[0];    f_min0 = freq_1d[0];  f_max0  = freq_1d[-1]\n",
     "freq_w_1d = spec.freq_w[n_time1//2]"
@@ -727,20 +724,19 @@
     "ax4.legend(loc='upper right', fontsize=8);  ax5.legend(loc='upper right', fontsize=8);  ax6.legend(loc='upper right', fontsize=8)\n",
     "ax7.legend(loc='upper right', fontsize=8);  ax8.legend(loc='upper right', fontsize=8);  ax9.legend(loc='upper right', fontsize=8)\n",
     "\n",
-    "# range: X-axis\n",
     "xlim=[f_min,       f_max];        ax1.set_xlim(xlim); xlim=[f_min+5000,  f_max+5000];   ax2.set_xlim(xlim);  \n",
     "xlim=[f_min+10000, f_max+10000];  ax3.set_xlim(xlim); xlim=[f_min+15000, f_max+15000];  ax4.set_xlim(xlim)\n",
     "xlim=[f_min+20000, f_max+20000];  ax5.set_xlim(xlim); xlim=[f_min+25000, f_max+25000];  ax6.set_xlim(xlim)\n",
     "xlim=[f_min+30000, f_max+30000];  ax7.set_xlim(xlim); xlim=[f_min+35000, f_max+35000];  ax8.set_xlim(xlim)\n",
-    "xlim=[f_min+40000, f_max+40000];  ax9.set_xlim(xlim)\n",
+    "xlim=[f_min+40000, f_max+40000];  ax9.set_xlim(xlim); \n",
+    "ax1.tick_params(labelsize=7); ax2.tick_params(labelsize=7); ax3.tick_params(labelsize=7); ax4.tick_params(labelsize=7); ax5.tick_params(labelsize=7)\n",
+    "ax6.tick_params(labelsize=7); ax7.tick_params(labelsize=7); ax8.tick_params(labelsize=7); ax9.tick_params(labelsize=7)\n",
     "\n",
-    "# range\n",
     "ylim=[10**p_min, 10**p_max]\n",
     "ax1.set_ylim(ylim); ax2.set_ylim(ylim);  ax3.set_ylim(ylim); ax4.set_ylim(ylim); ax5.set_ylim(ylim); ax6.set_ylim(ylim);  \n",
     "ax7.set_ylim(ylim); ax8.set_ylim(ylim);  ax9.set_ylim(ylim)\n",
     "\n",
-    "# Plot\n",
-    "fig.subplots_adjust(hspace=0.3)\n",
+    "fig.subplots_adjust(hspace=0.2)\n",
     "fig.show\n",
     "if dump_mode == 1:\n",
     "    png_fname = work_dir+data_name+'_spec-fine.png'\n",
@@ -1056,19 +1052,19 @@
     "ax4.legend(loc='upper right', fontsize=8);  ax5.legend(loc='upper right', fontsize=8);  ax6.legend(loc='upper right', fontsize=8)\n",
     "ax7.legend(loc='upper right', fontsize=8);  ax8.legend(loc='upper right', fontsize=8);  ax9.legend(loc='upper right', fontsize=8)\n",
     "\n",
-    "# range: X-axis\n",
     "xlim=[f_min,       f_max];        ax1.set_xlim(xlim); xlim=[f_min+5000,  f_max+5000];   ax2.set_xlim(xlim)  \n",
     "xlim=[f_min+10000, f_max+10000];  ax3.set_xlim(xlim); xlim=[f_min+15000, f_max+15000];  ax4.set_xlim(xlim)\n",
     "xlim=[f_min+20000, f_max+20000];  ax5.set_xlim(xlim); xlim=[f_min+25000, f_max+25000];  ax6.set_xlim(xlim)\n",
     "xlim=[f_min+30000, f_max+30000];  ax7.set_xlim(xlim); xlim=[f_min+35000, f_max+35000];  ax8.set_xlim(xlim)\n",
     "xlim=[f_min+40000, f_max+40000];  ax9.set_xlim(xlim)\n",
-    "# range: Y-axis\n",
+    "ax1.tick_params(labelsize=7); ax2.tick_params(labelsize=7); ax3.tick_params(labelsize=7); ax4.tick_params(labelsize=7); ax5.tick_params(labelsize=7)\n",
+    "ax6.tick_params(labelsize=7); ax7.tick_params(labelsize=7); ax8.tick_params(labelsize=7); ax9.tick_params(labelsize=7)\n",
+    "\n",
     "# ylim=[10**p_min, 10**p_max]\n",
     "# ax1.set_ylim(ylim); ax2.set_ylim(ylim);  ax3.set_ylim(ylim); ax4.set_ylim(ylim); ax5.set_ylim(ylim); ax6.set_ylim(ylim);  \n",
     "# ax7.set_ylim(ylim); ax8.set_ylim(ylim);  ax9.set_ylim(ylim)\n",
     "\n",
-    "# Plot\n",
-    "fig.subplots_adjust(hspace=0.3)\n",
+    "fig.subplots_adjust(hspace=0.2)\n",
     "fig.show\n",
     "if dump_mode == 1:\n",
     "    png_fname = work_dir+data_name+'-msk_spec-fine.png'\n",
