--- a/JUICE-CDF-HF-SID2_sp_mask.ipynb
+++ b/JUICE-CDF-HF-SID2_sp_mask.ipynb
@@ -5,7 +5,7 @@
    "id": "5ad0cc98",
    "metadata": {},
    "source": [
-    "# JUICE RPWI HF SID2 (RAW): L1a Mask Formation -- 2024/8/17"
+    "# JUICE RPWI HF SID2 (RAW): L1a Mask Formation -- 2024/8/18"
    ]
   },
   {
@@ -27,8 +27,8 @@
     "import csv\n",
     "import copy\n",
     "import glob\n",
-    "import matplotlib.pyplot as plt\n",
     "import matplotlib.colors as colors\n",
+    "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
     "import sys"
    ]
@@ -624,20 +624,19 @@
     "ax4.legend(loc='upper right', fontsize=8);  ax5.legend(loc='upper right', fontsize=8);  ax6.legend(loc='upper right', fontsize=8)\n",
     "ax7.legend(loc='upper right', fontsize=8);  ax8.legend(loc='upper right', fontsize=8);  ax9.legend(loc='upper right', fontsize=8)\n",
     "\n",
-    "# range: X-axis\n",
     "xlim=[f_min,       f_max];        ax1.set_xlim(xlim); xlim=[f_min+5000,  f_max+5000];   ax2.set_xlim(xlim);  \n",
     "xlim=[f_min+10000, f_max+10000];  ax3.set_xlim(xlim); xlim=[f_min+15000, f_max+15000];  ax4.set_xlim(xlim)\n",
     "xlim=[f_min+20000, f_max+20000];  ax5.set_xlim(xlim); xlim=[f_min+25000, f_max+25000];  ax6.set_xlim(xlim)\n",
     "xlim=[f_min+30000, f_max+30000];  ax7.set_xlim(xlim); xlim=[f_min+35000, f_max+35000];  ax8.set_xlim(xlim)\n",
     "xlim=[f_min+40000, f_max+40000];  ax9.set_xlim(xlim)\n",
+    "ax1.tick_params(labelsize=7); ax2.tick_params(labelsize=7); ax3.tick_params(labelsize=7); ax4.tick_params(labelsize=7); ax5.tick_params(labelsize=7)\n",
+    "ax6.tick_params(labelsize=7); ax7.tick_params(labelsize=7); ax8.tick_params(labelsize=7); ax9.tick_params(labelsize=7)\n",
     "\n",
-    "# range\n",
     "ylim=[10**p_min, 10**p_max]\n",
     "ax1.set_ylim(ylim); ax2.set_ylim(ylim);  ax3.set_ylim(ylim); ax4.set_ylim(ylim); ax5.set_ylim(ylim); ax6.set_ylim(ylim);  \n",
     "ax7.set_ylim(ylim); ax8.set_ylim(ylim);  ax9.set_ylim(ylim)\n",
     "\n",
-    "# Plot\n",
-    "fig.subplots_adjust(hspace=0.3)\n",
+    "fig.subplots_adjust(hspace=0.2)\n",
     "fig.show\n",
     "if dump_mode == 1:\n",
     "    png_fname = work_dir+data_name+'_spec-fine.png'\n",
@@ -923,11 +922,9 @@
     "if f_mode == 1:\n",
     "    ax1.set_xscale('log')\n",
     "    \n",
-    "# range\n",
     "xlim=[f_min, f_max];              ax1.set_xlim(xlim)\n",
     "ylim=[10**(p_min), 10**(p_max)];  ax1.set_ylim(ylim)\n",
     "\n",
-    "# Label\n",
     "ax1.set_ylabel('EE '+spec.str)\n",
     "date1 = Epoch_1d[n_sweep1];  date1 = date1.strftime('1st: %Y/%m/%d %R:%S   ')\n",
     "date2 = Epoch_1d[n_sweep2];  date2 = date2.strftime('Mid: %Y/%m/%d %R:%S   ')\n",
@@ -935,7 +932,6 @@
     "title_date = date1 + \"  -  \" + date2 + \"  -  \" + date3\n",
     "ax1.set_title(title_date);   ax1.legend(loc='upper right', fontsize=8);  \n",
     "\n",
-    "# Plot\n",
     "fig.show\n",
     "if dump_mode == 1:\n",
     "    png_fname = work_dir+data_name+'_spec-sid3emu.png'\n",
@@ -954,12 +950,12 @@
     "p_min = p_min0;   p_max = p_max0\n",
     "f_min = 0;        f_max = 5000\n",
     "\n",
-    "fig = plt.figure(figsize=(14, 40))\n",
+    "fig = plt.figure(figsize=(14, 11))\n",
     "ax1 = fig.add_subplot(9, 1, 1);  ax2 = fig.add_subplot(9, 1, 2);  ax3 = fig.add_subplot(9, 1, 3);  ax4 = fig.add_subplot(9, 1, 4)\n",
     "ax5 = fig.add_subplot(9, 1, 5);  ax6 = fig.add_subplot(9, 1, 6);  ax7 = fig.add_subplot(9, 1, 7);  ax8 = fig.add_subplot(9, 1, 8)\n",
     "ax9 = fig.add_subplot(9, 1, 9)\n",
     "\n",
-    "ax1.plot(freq_1d,      EE_med_msk,           '-y', linewidth=4,  label='EE_msk (SID2)')\n",
+    "ax1.plot(freq_1d,      EE_med_msk,           '-y', linewidth=4.,  label='EE_msk (SID2)')\n",
     "ax1.plot(freq_1d,      EE_med,               ':k', linewidth=.4,  label='EE (SID2)')\n",
     "ax1.plot(freq_1d,      EE_med_sid3,          '-k', linewidth=.8,  label='EE_sid3 (SID2)')\n",
     "ax1.plot(freq_1d_msk,  EE_msk*20,            '-c', linewidth=.3,  label='mask pattern')\n",
@@ -968,7 +964,7 @@
     "ax1.plot(freq_1d_sid3, spec_sid3_EE_med,     '-r', linewidth=.8,  label='raw EE_med(SID-3)')\n",
     "ax1.plot(freq_1d[peaks], EE_med_msk[peaks],  '.r',                label='EE_msk (SID2) - peak')\n",
     "#\n",
-    "ax2.plot(freq_1d,      EE_med_msk,           '-y', linewidth=4,  label='EE_msk (SID2)')\n",
+    "ax2.plot(freq_1d,      EE_med_msk,           '-y', linewidth=4.,  label='EE_msk (SID2)')\n",
     "ax2.plot(freq_1d,      EE_med,               ':k', linewidth=.4,  label='EE (SID2)')\n",
     "ax2.plot(freq_1d,      EE_med_sid3,          '-k', linewidth=.8,  label='EE_sid3 (SID2)')\n",
     "ax2.plot(freq_1d_msk,  EE_msk*20,            '-c', linewidth=.3,  label='mask pattern')\n",
@@ -977,7 +973,7 @@
     "ax2.plot(freq_1d_sid3, spec_sid3_EE_med,     '-r', linewidth=.8,  label='raw EE_med(SID-3)')\n",
     "ax2.plot(freq_1d[peaks], EE_med_msk[peaks],  '.r',                label='EE_msk (SID2) - peak')\n",
     "#\n",
-    "ax3.plot(freq_1d,      EE_med_msk,           '-y', linewidth=4,  label='EE_msk (SID2)')\n",
+    "ax3.plot(freq_1d,      EE_med_msk,           '-y', linewidth=4.,  label='EE_msk (SID2)')\n",
     "ax3.plot(freq_1d,      EE_med,               ':k', linewidth=.4,  label='EE (SID2)')\n",
     "ax3.plot(freq_1d,      EE_med_sid3,          '-k', linewidth=.8,  label='EE_sid3 (SID2)')\n",
     "ax3.plot(freq_1d_msk,  EE_msk*20,            '-c', linewidth=.3,  label='mask pattern')\n",
@@ -986,7 +982,7 @@
     "ax3.plot(freq_1d_sid3, spec_sid3_EE_med,     '-r', linewidth=.8,  label='raw EE_med(SID-3)')\n",
     "ax3.plot(freq_1d[peaks], EE_med_msk[peaks],  '.r',                label='EE_msk (SID2) - peak')\n",
     "#\n",
-    "ax4.plot(freq_1d,      EE_med_msk,           '-y', linewidth=4,  label='EE_msk (SID2)')\n",
+    "ax4.plot(freq_1d,      EE_med_msk,           '-y', linewidth=4.,  label='EE_msk (SID2)')\n",
     "ax4.plot(freq_1d,      EE_med,               ':k', linewidth=.4,  label='EE (SID2)')\n",
     "ax4.plot(freq_1d,      EE_med_sid3,          '-k', linewidth=.8,  label='EE_sid3 (SID2)')\n",
     "ax4.plot(freq_1d_msk,  EE_msk*20,            '-c', linewidth=.3,  label='mask pattern')\n",
@@ -995,7 +991,7 @@
     "ax4.plot(freq_1d_sid3, spec_sid3_EE_med,     '-r', linewidth=.8,  label='raw EE_med(SID-3)')\n",
     "ax4.plot(freq_1d[peaks], EE_med_msk[peaks],  '.r',                label='EE_msk (SID2) - peak')\n",
     "#\n",
-    "ax5.plot(freq_1d,      EE_med_msk,           '-y', linewidth=4,  label='EE_msk (SID2)')\n",
+    "ax5.plot(freq_1d,      EE_med_msk,           '-y', linewidth=4.,  label='EE_msk (SID2)')\n",
     "ax5.plot(freq_1d,      EE_med,               ':k', linewidth=.4,  label='EE (SID2)')\n",
     "ax5.plot(freq_1d,      EE_med_sid3,          '-k', linewidth=.8,  label='EE_sid3 (SID2)')\n",
     "ax5.plot(freq_1d_msk,  EE_msk*20,            '-c', linewidth=.3,  label='mask pattern')\n",
@@ -1004,7 +1000,7 @@
     "ax5.plot(freq_1d_sid3, spec_sid3_EE_med,     '-r', linewidth=.8,  label='raw EE_med(SID-3)')\n",
     "ax5.plot(freq_1d[peaks], EE_med_msk[peaks],  '.r',                label='EE_msk (SID2) - peak')\n",
     "#\n",
-    "ax6.plot(freq_1d,      EE_med_msk,           '-y', linewidth=4,  label='EE_msk (SID2)')\n",
+    "ax6.plot(freq_1d,      EE_med_msk,           '-y', linewidth=4.,  label='EE_msk (SID2)')\n",
     "ax6.plot(freq_1d,      EE_med,               ':k', linewidth=.4,  label='EE (SID2)')\n",
     "ax6.plot(freq_1d,      EE_med_sid3,          '-k', linewidth=.8,  label='EE_sid3 (SID2)')\n",
     "ax6.plot(freq_1d_msk,  EE_msk*20,            '-c', linewidth=.3,  label='mask pattern')\n",
@@ -1013,7 +1009,7 @@
     "ax6.plot(freq_1d_sid3, spec_sid3_EE_med,     '-r', linewidth=.8,  label='raw EE_med(SID-3)')\n",
     "ax6.plot(freq_1d[peaks], EE_med_msk[peaks],  '.r',                label='EE_msk (SID2) - peak')\n",
     "#\n",
-    "ax7.plot(freq_1d,      EE_med_msk,           '-y', linewidth=4,  label='EE_msk (SID2)')\n",
+    "ax7.plot(freq_1d,      EE_med_msk,           '-y', linewidth=4.,  label='EE_msk (SID2)')\n",
     "ax7.plot(freq_1d,      EE_med,               ':k', linewidth=.4,  label='EE (SID2)')\n",
     "ax7.plot(freq_1d,      EE_med_sid3,          '-k', linewidth=.8,  label='EE_sid3 (SID2)')\n",
     "ax7.plot(freq_1d_msk,  EE_msk*20,            '-c', linewidth=.3,  label='mask pattern')\n",
@@ -1022,7 +1018,7 @@
     "ax7.plot(freq_1d_sid3, spec_sid3_EE_med,     '-r', linewidth=.8,  label='raw EE_med(SID-3)')\n",
     "ax7.plot(freq_1d[peaks], EE_med_msk[peaks],  '.r',                label='EE_msk (SID2) - peak')\n",
     "#\n",
-    "ax8.plot(freq_1d,      EE_med_msk,           '-y', linewidth=4,  label='EE_msk (SID2)')\n",
+    "ax8.plot(freq_1d,      EE_med_msk,           '-y', linewidth=4.,  label='EE_msk (SID2)')\n",
     "ax8.plot(freq_1d,      EE_med,               ':k', linewidth=.4,  label='EE (SID2)')\n",
     "ax8.plot(freq_1d,      EE_med_sid3,          '-k', linewidth=.8,  label='EE_sid3 (SID2)')\n",
     "ax8.plot(freq_1d_msk,  EE_msk*20,            '-c', linewidth=.3,  label='mask pattern')\n",
@@ -1031,7 +1027,7 @@
     "ax8.plot(freq_1d_sid3, spec_sid3_EE_med,     '-r', linewidth=.8,  label='raw EE_med(SID-3)')\n",
     "ax8.plot(freq_1d[peaks], EE_med_msk[peaks],  '.r',                label='EE_msk (SID2) - peak')\n",
     "#\n",
-    "ax9.plot(freq_1d,      EE_med_msk,           '-y', linewidth=4,  label='EE_msk (SID2)')\n",
+    "ax9.plot(freq_1d,      EE_med_msk,           '-y', linewidth=4.,  label='EE_msk (SID2)')\n",
     "ax9.plot(freq_1d,      EE_med,               ':k', linewidth=.4,  label='EE (SID2)')\n",
     "ax9.plot(freq_1d,      EE_med_sid3,          '-k', linewidth=.8,  label='EE_sid3 (SID2)')\n",
     "ax9.plot(freq_1d_msk,  EE_msk*20,            '-c', linewidth=.3,  label='mask pattern')\n",
@@ -1069,12 +1065,15 @@
     "xlim=[f_min+30000, f_max+30000];  ax7.set_xlim(xlim)\n",
     "xlim=[f_min+35000, f_max+35000];  ax8.set_xlim(xlim)\n",
     "xlim=[f_min+40000, f_max+40000];  ax9.set_xlim(xlim)\n",
+    "ax1.tick_params(labelsize=7); ax2.tick_params(labelsize=7); ax3.tick_params(labelsize=7); ax4.tick_params(labelsize=7); ax5.tick_params(labelsize=7)\n",
+    "ax6.tick_params(labelsize=7); ax7.tick_params(labelsize=7); ax8.tick_params(labelsize=7); ax9.tick_params(labelsize=7)\n",
     "\n",
-    "# range: Y-axis\n",
     "ylim=[10**p_min, 10**p_max]\n",
-    "# ylim=[1, 50]\n",
     "ax1.set_ylim(ylim); ax2.set_ylim(ylim);  ax3.set_ylim(ylim); ax4.set_ylim(ylim); ax5.set_ylim(ylim); ax6.set_ylim(ylim);  \n",
-    "ax7.set_ylim(ylim); ax8.set_ylim(ylim);  ax9.set_ylim(ylim)"
+    "ax7.set_ylim(ylim); ax8.set_ylim(ylim);  ax9.set_ylim(ylim)\n",
+    "\n",
+    "fig.subplots_adjust(hspace=0)\n",
+    "fig.show\n"
    ]
   }
  ],
