--- a/JUICE-CDF-HF-SID3_sample.ipynb
+++ b/JUICE-CDF-HF-SID3_sample.ipynb
@@ -55,9 +55,11 @@
     "\n",
     "# *** Library ***\n",
     "sys.path.append('./lib/')\n",
+    "import juice_cal_lib  as juice_cal\n",
     "import juice_cdf_lib  as juice_cdf\n",
     "import juice_math_lib as juice_math\n",
-    "import juice_sid3_lib as juice_sid3"
+    "import juice_sid3_lib as juice_sid3\n",
+    "import juice_spec_lib as juice_spec"
    ]
   },
   {
@@ -504,13 +506,39 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "15c383e2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "T_HF  = data.T_HF_FPGA[n_time0//2];  T_RWI = (data.T_RWI_CH1[n_time0//2] + data.T_RWI_CH2[n_time0//2])/2\n",
+    "if T_HF  > 75 or T_HF < -25:\n",
+    "   T_HF  = 25\n",
+    "if T_RWI > 75 or T_RWI < -180:\n",
+    "   T_RWI = 25"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c2e938a2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "spec = juice_cal.spec_cal(data, 3, unit_mode, band_mode, T_HF, T_RWI)  # CAL\n",
+    "spec = juice_spec.hf_getspec_angle(spec)                                # Coherency & ange\n",
+    "spec = juice_spec.hf_getspec_stokes(spec)                               # Stokes and Polarization Parameters "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "1200e4ac",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# *** Conversion factor: waveform ***\n",
-    "cf, p_max0, p_min0, str_unit = juice_cdf.cal_factors(unit_mode, p_raw_max, p_raw_min)\n",
-    "print(\"conversion factor:\", cf, \"    MAX-min:\", p_max0, p_min0, \"   str_unit:\", str_unit)"
+    "p_max0 = p_raw_max\n",
+    "p_min0 = p_raw_min\n",
+    "print(\"conversion factor:\", spec.cf, \"    MAX-min:\", p_max0, p_min0, \"   str_unit:\", spec.str)"
    ]
   },
   {
@@ -563,10 +591,10 @@
    "outputs": [],
    "source": [
     "if comp_mode == 0:    # power\n",
-    "    fig = plt.figure(figsize=(12, 8))\n",
+    "    fig = plt.figure(figsize=(14, 11))\n",
     "    ax1 = fig.add_subplot(4, 1, 1);  ax7 = fig.add_subplot(4, 1, 2); ax8 = fig.add_subplot(4, 1, 3);  ax9 = fig.add_subplot(4, 1, 4)\n",
     "else:                       # matrix\n",
-    "    fig = plt.figure(figsize=(12, 16))\n",
+    "    fig = plt.figure(figsize=(14, 11))\n",
     "    ax1 = fig.add_subplot(9, 1, 1); ax7 = fig.add_subplot(9, 1, 7);  ax8 = fig.add_subplot(9, 1, 8);  ax9 = fig.add_subplot(9, 1, 9)\n",
     "    ax2 = fig.add_subplot(9, 1, 2); ax3 = fig.add_subplot(9, 1, 3);  ax4 = fig.add_subplot(9, 1, 4)\n",
     "    ax5 = fig.add_subplot(9, 1, 5); ax6 = fig.add_subplot(9, 1, 6) \n",
@@ -651,8 +679,7 @@
     "    ax6.plot(np.ravel(data.E_ANGwu_NC), '-b', linewidth=0.6, label='wu')\n",
     "\"\"\"\n",
     "\n",
-    "# ax1.set_ylabel(power_str);  \n",
-    "ax1.set_ylabel(str_unit);\n",
+    "ax1.set_ylabel(spec.str)\n",
     "ax8.set_ylabel('T [degC]');   ax9.set_ylabel('Date-Time')\n",
     "ax8.set_xlabel(str_date)\n",
     "if comp_mode > 0:    # Matrix\n",
@@ -681,7 +708,7 @@
     "    ylim=[-0.05, 185.]; ax6.set_ylim(ylim)\n",
     "ylim=[f_min0, f_max0]; ax7.set_ylim(ylim)\n",
     "\n",
-    "# Plot\n",
+    "fig.subplots_adjust(hspace=0)\n",
     "fig.show\n",
     "if dump_mode == 1:\n",
     "    png_fname = work_dir+data_name+'_raw.png'\n",
@@ -738,8 +765,8 @@
     "\"\"\"#\n",
     "f_min0 = freq_1d[0]\n",
     "f_max0 = freq_1d[N_frequency-1]\n",
-    "power_str = juice_cdf.power_label(band_mode, unit_mode)\n",
-    "print(power_str, \"   f_MAX/min:\", f_max0, f_min0)\n",
+    "# power_str = juice_cdf.power_label(band_mode, unit_mode)\n",
+    "print(spec.str, \"   f_MAX/min:\", f_max0, f_min0)\n",
     "# print(freq1); print(freq_width1)"
    ]
   },
@@ -867,10 +894,10 @@
     "    f_min = f_mode_min;  f_max = f_mode_max\n",
     "\n",
     "if comp_mode == 0:    # power\n",
-    "    fig = plt.figure(figsize=(12, 4))\n",
+    "    fig = plt.figure(figsize=(14, 11))\n",
     "    ax1 = fig.add_subplot(1, 1, 1)\n",
     "else:                      # matrix\n",
-    "    fig = plt.figure(figsize=(12, 12))\n",
+    "    fig = plt.figure(figsize=(14, 11))\n",
     "    ax1 = fig.add_subplot(4, 1, 1);  ax5 = fig.add_subplot(4, 1, 2);  ax6 = fig.add_subplot(4, 1, 3);  ax7 = fig.add_subplot(4, 1, 4)\n",
     "    # ax3 = fig.add_subplot(6, 1, 2);  ax4 = fig.add_subplot(6, 1, 3)\n",
     " \n",
@@ -944,7 +971,7 @@
     "        ax5.set_xscale('log');  ax6.set_xscale('log');  ax7.set_xscale('log')   # ax3.set_xscale('log');  ax4.set_xscale('log')\n",
     "\n",
     "# Label\n",
-    "ax1.set_ylabel(power_str);  ax7.set_xlabel('frequency [Hz]')\n",
+    "ax1.set_ylabel(spec.str);  ax7.set_xlabel('frequency [Hz]')\n",
     "if comp_mode > 0:    # Matrix\n",
     "    ax5.set_ylabel('Deg. Linear Pol.');  ax6.set_ylabel('Deg. Circular Pol.');  ax7.set_ylabel('Linear Deg.')\n",
     "    ax4.set_ylabel('Deg. Pol.');         ax3.set_ylabel('Real & Img')\n",
@@ -973,7 +1000,7 @@
     "    if N_ch0 < 3:\n",
     "        ylim=[-10**(p_raw_max-3), 10**(p_raw_max-3)];  ax3.set_ylim(ylim)\n",
     "\n",
-    "# Plot\n",
+    "fig.subplots_adjust(hspace=0)\n",
     "fig.show\n",
     "if dump_mode == 1:\n",
     "    png_fname = work_dir+data_name+'_spec.png'\n",
@@ -1007,7 +1034,7 @@
     "# Epoch_1d\n",
     "num_1d = np.arange(n_time0)\n",
     "\n",
-    "fig2d = plt.figure(figsize=[12,14])\n",
+    "fig2d = plt.figure(figsize=[16,11])\n",
     "ax1 = fig2d.add_subplot(4, 1, 1);  ax2 = fig2d.add_subplot(4, 1, 2);  ax3 = fig2d.add_subplot(4, 1, 3)\n",
     "if time_mode == 1:\n",
     "    ax4 = fig2d.add_subplot(4, 1, 4)\n",
@@ -1031,14 +1058,14 @@
     "    p2 = ax2.pcolormesh(num_1d, freq_1d, EvEv_2d, norm=colors.LogNorm(vmin=10**p_min, vmax=10**p_max), cmap='jet')\n",
     "    p3 = ax3.pcolormesh(num_1d, freq_1d, EwEw_2d, norm=colors.LogNorm(vmin=10**p_min, vmax=10**p_max), cmap='jet')\n",
     "    p4 = ax4.plot(np.ravel(data.epoch[:]), '.')\n",
-    "    pp3 = fig2d.colorbar(p3, ax=ax4, orientation=\"vertical\"); pp3.set_label(power_str)\n",
+    "    pp3 = fig2d.colorbar(p3, ax=ax4, orientation=\"vertical\"); pp3.set_label(spec.str)\n",
     "else:\n",
     "    p1 = ax1.pcolormesh(Epoch_1d, freq_1d, EuEu_2d, norm=colors.LogNorm(vmin=10**p_min, vmax=10**p_max), cmap='jet')\n",
     "    p2 = ax2.pcolormesh(Epoch_1d, freq_1d, EvEv_2d, norm=colors.LogNorm(vmin=10**p_min, vmax=10**p_max), cmap='jet')\n",
     "    p3 = ax3.pcolormesh(Epoch_1d, freq_1d, EwEw_2d, norm=colors.LogNorm(vmin=10**p_min, vmax=10**p_max), cmap='jet')\n",
-    "pp1 = fig2d.colorbar(p1, ax=ax1, orientation=\"vertical\");  pp1.set_label(power_str)\n",
-    "pp2 = fig2d.colorbar(p2, ax=ax2, orientation=\"vertical\");  pp2.set_label(power_str)\n",
-    "pp3 = fig2d.colorbar(p3, ax=ax3, orientation=\"vertical\");  pp3.set_label(power_str)\n",
+    "pp1 = fig2d.colorbar(p1, ax=ax1, orientation=\"vertical\");  pp1.set_label(spec.str)\n",
+    "pp2 = fig2d.colorbar(p2, ax=ax2, orientation=\"vertical\");  pp2.set_label(spec.str)\n",
+    "pp3 = fig2d.colorbar(p3, ax=ax3, orientation=\"vertical\");  pp3.set_label(spec.str)\n",
     "\n",
     "# X-axis: Time\n",
     "if time_mode == 1:\n",
@@ -1051,6 +1078,7 @@
     "    xlim=[Epoch_1d[0], Epoch_1d[-1]]\n",
     "ax1.set_xlim(xlim); ax2.set_xlim(xlim); ax3.set_xlim(xlim)\n",
     "\n",
+    "plt.subplots_adjust(hspace=0.02)\n",
     "plt.show()\n",
     "if dump_mode == 1:\n",
     "    png_fname = work_dir+data_name+'_FT.png'\n",
@@ -1107,7 +1135,7 @@
     "    # Z-range\n",
     "    p_min = p_min0;      p_max = p_max0\n",
     "\n",
-    "    fig2d = plt.figure(figsize=[12,33])\n",
+    "    fig2d = plt.figure(figsize=[16,11])\n",
     "    ax1 = fig2d.add_subplot(10, 1, 1);  ax2 = fig2d.add_subplot(10, 1, 2);  ax3 = fig2d.add_subplot(10, 1, 3)\n",
     "    ax4 = fig2d.add_subplot(10, 1, 4);  ax5 = fig2d.add_subplot(10, 1, 5);  ax6 = fig2d.add_subplot(10, 1, 6)\n",
     "    ax7 = fig2d.add_subplot(10, 1, 7);  ax8 = fig2d.add_subplot(10, 1, 8);  ax9 = fig2d.add_subplot(10, 1, 9)\n",
@@ -1147,7 +1175,7 @@
     "        p8 = ax8.pcolormesh(num_1d, freq_1d, E_ANGvw_2d, norm=colors.Normalize(vmin=-1.00, vmax=181.), cmap='hsv')\n",
     "        p9 = ax9.pcolormesh(num_1d, freq_1d, E_ANGwu_2d, norm=colors.Normalize(vmin=-1.00, vmax=181.), cmap='hsv')\n",
     "        p10 = ax10.plot(np.ravel(data.epoch[:]), '.')\n",
-    "        pp9 = fig2d.colorbar(p9, ax=ax10, orientation=\"vertical\"); pp9.set_label(power_str)\n",
+    "        pp9 = fig2d.colorbar(p9, ax=ax10, orientation=\"vertical\"); pp9.set_label(spec.str)\n",
     "    else:\n",
     "        p1 = ax1.pcolormesh(Epoch_1d, freq_1d, E_DoLuv_2d, norm=colors.Normalize(vmin=-0.01, vmax=1.01), cmap='jet')\n",
     "        p2 = ax2.pcolormesh(Epoch_1d, freq_1d, E_DoLvw_2d, norm=colors.Normalize(vmin=-0.01, vmax=1.01), cmap='jet')\n",
@@ -1180,6 +1208,7 @@
     "    ax1.set_xlim(xlim); ax2.set_xlim(xlim); ax3.set_xlim(xlim); ax4.set_xlim(xlim); ax5.set_xlim(xlim)\n",
     "    ax6.set_xlim(xlim); ax7.set_xlim(xlim); ax8.set_xlim(xlim); ax9.set_xlim(xlim)\n",
     "\n",
+    "    plt.subplots_adjust(hspace=0.02)\n",
     "    plt.show()\n",
     "    if dump_mode == 1:\n",
     "        png_fname = work_dir+data_name+'_AngT.png'\n",
@@ -1240,7 +1269,7 @@
     "# Y-range\n",
     "p_min = p_min0;  p_max = p_max0\n",
     "\n",
-    "fig = plt.figure(figsize=(12, 8))\n",
+    "fig = plt.figure(figsize=(16, 11))\n",
     "ax1 = fig.add_subplot(2, 1, 1)\n",
     "ax2 = fig.add_subplot(2, 1, 2)\n",
     "\n",
@@ -1267,7 +1296,7 @@
     "    ax1.set_xscale('log');  ax2.set_xscale('log')\n",
     "\n",
     "# Label\n",
-    "ax1.set_ylabel(power_str);  ax2.set_ylabel(power_str)\n",
+    "ax1.set_ylabel(spec.str);  ax2.set_ylabel(spec.str)\n",
     "ax2.set_xlabel('frequency [Hz]')\n",
     "#\n",
     "date1 = data.epoch[n0];  date1 = date1.strftime('%Y/%m/%d %R:%S')\n",
@@ -1282,6 +1311,7 @@
     "ax1.set_xlim(xlim); ax2.set_xlim(xlim);\n",
     "\n",
     "# Plot\n",
+    "fig.subplots_adjust(hspace=0)\n",
     "fig.show\n",
     "png_fname = work_dir+data_name+'_spec-c.png'\n",
     "if f_mode == 1:\n",
@@ -1312,7 +1342,7 @@
     "# Z-range\n",
     "p_min = p_min0+2.5;  p_max = p_max0-3\n",
     "\n",
-    "fig2d = plt.figure(figsize=[12,14])\n",
+    "fig2d = plt.figure(figsize=[16,11])\n",
     "ax1 = fig2d.add_subplot(4, 1, 1);  ax2 = fig2d.add_subplot(4, 1, 2);  ax3 = fig2d.add_subplot(4, 1, 3)\n",
     "if time_mode == 1:\n",
     "    ax4 = fig2d.add_subplot(4, 1, 4)\n",
@@ -1336,15 +1366,15 @@
     "    p2 = ax2.pcolormesh(num_1d, freq_1d, EvEv_c_2d, norm=colors.LogNorm(vmin=10**p_min, vmax=10**p_max), cmap='jet')\n",
     "    p3 = ax3.pcolormesh(num_1d, freq_1d, EwEw_c_2d, norm=colors.LogNorm(vmin=10**p_min, vmax=10**p_max), cmap='jet')\n",
     "    p4 = ax4.plot(np.ravel(data.epoch[:]), '.')\n",
-    "    pp3 = fig2d.colorbar(p3, ax=ax4, orientation=\"vertical\"); pp3.set_label(power_str)\n",
+    "    pp3 = fig2d.colorbar(p3, ax=ax4, orientation=\"vertical\"); pp3.set_label(spec.str)\n",
     "else:\n",
     "    p1 = ax1.pcolormesh(Epoch_1d, freq_1d, EuEu_c_2d, norm=colors.LogNorm(vmin=10**p_min0, vmax=10**p_max0), cmap='jet')\n",
     "    p2 = ax2.pcolormesh(Epoch_1d, freq_1d, EvEv_c_2d, norm=colors.LogNorm(vmin=10**p_min0, vmax=10**p_max0), cmap='jet')\n",
     "    p3 = ax3.pcolormesh(Epoch_1d, freq_1d, EwEw_c_2d, norm=colors.LogNorm(vmin=10**p_min0, vmax=10**p_max0), cmap='jet')\n",
     "\n",
-    "pp1 = fig2d.colorbar(p1, ax=ax1, orientation=\"vertical\");  pp1.set_label(power_str)\n",
-    "pp2 = fig2d.colorbar(p2, ax=ax2, orientation=\"vertical\");  pp2.set_label(power_str)\n",
-    "pp3 = fig2d.colorbar(p3, ax=ax3, orientation=\"vertical\");  pp3.set_label(power_str)\n",
+    "pp1 = fig2d.colorbar(p1, ax=ax1, orientation=\"vertical\");  pp1.set_label(spec.str)\n",
+    "pp2 = fig2d.colorbar(p2, ax=ax2, orientation=\"vertical\");  pp2.set_label(spec.str)\n",
+    "pp3 = fig2d.colorbar(p3, ax=ax3, orientation=\"vertical\");  pp3.set_label(spec.str)\n",
     "\n",
     "# X-axis\n",
     "if time_mode == 1:\n",
@@ -1357,6 +1387,7 @@
     "    xlim=[Epoch_1d[0], Epoch_1d[-1]]\n",
     "ax1.set_xlim(xlim); ax2.set_xlim(xlim); ax3.set_xlim(xlim)\n",
     "\n",
+    "plt.subplots_adjust(hspace=0.02)\n",
     "plt.show()\n",
     "png_fname = work_dir+data_name+'_FT-c.png'\n",
     "if f_mode == 1:\n",
