--- a/JUICE-CDF-HF-SID5_sample.ipynb
+++ b/JUICE-CDF-HF-SID5_sample.ipynb
@@ -54,7 +54,8 @@
     "\n",
     "# *** Library ***\n",
     "sys.path.append('./lib/')\n",
-    "import juice_cdf_lib as juice_cdf\n",
+    "import juice_cal_lib  as juice_cal\n",
+    "import juice_cdf_lib  as juice_cdf\n",
     "import juice_math_lib as juice_math\n",
     "import juice_sid5_lib as juice_sid5"
    ]
@@ -87,8 +88,11 @@
     "p_raw_min = 4.0                         # background: 2.5   CAL: 5\n",
     "\n",
     "# *** Conversion factor: cal_mode ***\n",
-    "cf, p_max0, p_min0, str_unit = juice_cdf.cal_factors(unit_mode, p_raw_max, p_raw_min)\n",
-    "print(\"conversion factor:\", cf, \"    MAX-min:\", p_max0, p_min0, \"   str_unit:\", str_unit)"
+    "p_max0 = p_raw_max\n",
+    "p_min0 = p_raw_min\n",
+    "print(\"MAX-min:\", p_max0, p_min0)\n",
+    "# cf, p_max0, p_min0, str_unit = juice_cdf.cal_factors(unit_mode, p_raw_max, p_raw_min)\n",
+    "# print(\"conversion factor:\", cf, \"    MAX-min:\", p_max0, p_min0, \"   str_unit:\", str_unit)"
    ]
   },
   {
@@ -219,6 +223,30 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e7603aea",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "T_HF  = data.T_HF_FPGA[n_time0//2];  T_RWI = (data.T_RWI_CH1[n_time0//2] + data.T_RWI_CH2[n_time0//2])/2\n",
+    "if T_HF  > 75 or T_HF < -25:\n",
+    "   T_HF  = 25\n",
+    "if T_RWI > 75 or T_RWI < -180:\n",
+    "   T_RWI = 25"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b1c42138",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "spec = juice_cal.spec_cal(data, 5, unit_mode, band_mode, T_HF, T_RWI)  # CAL"
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "id": "3dbd3949",
@@ -255,7 +283,7 @@
     "\n",
     "f_min0 = freq_1d[0]\n",
     "f_max0 = freq_1d[N_frequency-1]\n",
-    "power_str = juice_cdf.power_label(band_mode, unit_mode)"
+    "# power_str = juice_cdf.power_label(band_mode, unit_mode)"
    ]
   },
   {
@@ -274,7 +302,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fig = plt.figure(figsize=(12, 10))\n",
+    "fig = plt.figure(figsize=(14, 11))\n",
     "ax1 = fig.add_subplot(4, 1, 1);  ax2 = fig.add_subplot(4, 1, 2);  ax3 = fig.add_subplot(4, 1, 4);  ax4 = fig.add_subplot(4, 1, 3)\n",
     "\n",
     "ax1.plot(np.ravel(data.EE), '-r', linewidth=.5, label='EE')\n",
@@ -288,7 +316,7 @@
     "ax4.plot(np.ravel(data.T_RWI_CH1),  ':b', label='T (RWI1)')\n",
     "ax4.plot(np.ravel(data.T_RWI_CH2),  ':g', label='T (RWI2)')\n",
     "\n",
-    "ax1.set_ylabel(power_str);  ax2.set_ylabel('frequency [kHz]');  ax3.set_ylabel('Date-Time');  ax4.set_ylabel('T [degC]')\n",
+    "ax1.set_ylabel(spec.str);  ax2.set_ylabel('frequency [kHz]');  ax3.set_ylabel('Date-Time');  ax4.set_ylabel('T [degC]')\n",
     "ax3.set_xlabel(str_date)\n",
     "#\n",
     "title_label = '[JUICE/RPWI HF PSSR1-Surv (SID-5)]  ' + data_name\n",
@@ -339,7 +367,7 @@
     "# Y-range\n",
     "p_min = p_min0;  p_max = p_max0\n",
     "\n",
-    "fig, cal = plt.subplots(figsize=(12, 8))\n",
+    "fig, cal = plt.subplots(figsize=(14, 11))\n",
     "\n",
     "cal.plot(freq1, data.EE[n0][0:N_frequency], '-r', linewidth=1.0, label='uu init')\n",
     "cal.plot(freq1, data.EE[n1][0:N_frequency], '-g', linewidth=1.0, label='uu half')\n",
@@ -349,19 +377,16 @@
     "    cal.set_xscale('log')\n",
     "\n",
     "# Label\n",
-    "cal.set_ylabel(power_str)\n",
+    "cal.set_ylabel(spec.str)\n",
     "cal.set_xlabel('Frequency [kHz]')\n",
     "#\n",
     "date1 = data.epoch[n0];  date1 = date1.strftime('%Y/%m/%d %R:%S')\n",
     "date2 = data.epoch[n1];  date2 = date2.strftime('%Y/%m/%d %R:%S')\n",
     "date3 = data.epoch[n2];  date3 = date3.strftime('%Y/%m/%d %R:%S')\n",
     "title_date = \"[\" + data_name + \"]  \" + date1 + \"  -  \" + date2 + \"  -  \" + date3 \n",
-    "cal.set_title(title_date)\n",
-    "cal.legend(loc='upper right', fontsize=8)\n",
+    "cal.set_title(title_date);  cal.legend(loc='upper right', fontsize=8)\n",
     "\n",
-    "# range: X-axis\n",
     "xlim=[f_min, f_max];           cal.set_xlim(xlim)\n",
-    "# range: Y-axis\n",
     "ylim=[10**p_min, 10**p_max];   cal.set_ylim(ylim)\n",
     "\n",
     "plt.show\n",
@@ -401,7 +426,7 @@
     "# Z-range\n",
     "p_min = p_min0;      p_max = p_max0\n",
     "\n",
-    "fig2d = plt.figure(figsize=[12,8])\n",
+    "fig2d = plt.figure(figsize=[16,11])\n",
     "ax1 = fig2d.add_subplot(1, 1, 1)\n",
     "\n",
     "# Y-axis\n",
@@ -417,7 +442,7 @@
     "# Plot\n",
     "p1 = ax1.pcolormesh(Epoch_1d, freq_1d, EE_2d, norm=colors.LogNorm(vmin=10**p_min, vmax=10**p_max), cmap='jet')\n",
     "\n",
-    "pp1 = fig2d.colorbar(p1, ax=ax1, orientation=\"vertical\");  pp1.set_label(power_str)\n",
+    "pp1 = fig2d.colorbar(p1, ax=ax1, orientation=\"vertical\");  pp1.set_label(spec.str)\n",
     "\n",
     "plt.show()\n",
     "if dump_mode == 1:\n",
