--- a/JUICE-CDF-HF-SID7_sample.ipynb
+++ b/JUICE-CDF-HF-SID7_sample.ipynb
@@ -5,7 +5,7 @@
    "id": "5ad0cc98",
    "metadata": {},
    "source": [
-    "# JUICE RPWI HF SID7 (PSSR3 surv): L1a QL -- 2024/7/21"
+    "# JUICE RPWI HF SID7 (PSSR3 surv): L1a QL -- 2024/8/18"
    ]
   },
   {
@@ -256,7 +256,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fig = plt.figure(figsize=(12, 9))\n",
+    "fig = plt.figure(figsize=(14, 11))\n",
     "ax1 = fig.add_subplot(3, 1, 1);  ax2 = fig.add_subplot(3, 1, 3);  ax3 = fig.add_subplot(3, 1, 2)\n",
     "\n",
     "ax1.plot(np.ravel(data.auto_corr[:][:]), linewidth=.5, label='auto_corr')\n",
@@ -304,7 +304,7 @@
    "source": [
     "n_sweep = 0\n",
     "\n",
-    "fig = plt.figure(figsize=(12, 10))\n",
+    "fig = plt.figure(figsize=(14, 11))\n",
     "ax1 = fig.add_subplot(4, 4, 1);   ax2 = fig.add_subplot(4, 4, 2);   ax3 = fig.add_subplot(4, 4, 3);   ax4 = fig.add_subplot(4, 4, 4)\n",
     "ax5 = fig.add_subplot(4, 4, 5);   ax6 = fig.add_subplot(4, 4, 6);   ax7 = fig.add_subplot(4, 4, 7);   ax8 = fig.add_subplot(4, 4, 8)\n",
     "ax9 = fig.add_subplot(4, 4, 9);   ax10 = fig.add_subplot(4, 4, 10); ax11 = fig.add_subplot(4, 4, 11); ax12 = fig.add_subplot(4, 4, 12)\n",
@@ -367,7 +367,7 @@
     "ax13.legend(loc='upper right', fontsize=8); ax14.legend(loc='upper right', fontsize=8);  ax15.legend(loc='upper right', fontsize=8)\n",
     "ax12.set_xlabel(\"Time [sec]\"); ax13.set_xlabel(\"Time [sec]\"); ax14.set_xlabel(\"Time [sec]\"); ax15.set_xlabel(\"Time [sec]\")\n",
     "\n",
-    "# Plot\n",
+    "fig.subplots_adjust(hspace=0)\n",
     "fig.show\n",
     "if dump_mode == 1:\n",
     "    png_fname = work_dir+data_name+'_1st.png'\n",
@@ -391,7 +391,7 @@
     "n_sweep = n_time0-2\n",
     "print(\"[mid]\", n_sweep, \"in total:\", n_time0)\n",
     "\n",
-    "fig = plt.figure(figsize=(12, 10))\n",
+    "fig = plt.figure(figsize=(14, 11))\n",
     "ax1 = fig.add_subplot(4, 4, 1);   ax2 = fig.add_subplot(4, 4, 2);   ax3 = fig.add_subplot(4, 4, 3);   ax4 = fig.add_subplot(4, 4, 4)\n",
     "ax5 = fig.add_subplot(4, 4, 5);   ax6 = fig.add_subplot(4, 4, 6);   ax7 = fig.add_subplot(4, 4, 7);   ax8 = fig.add_subplot(4, 4, 8)\n",
     "ax9 = fig.add_subplot(4, 4, 9);   ax10 = fig.add_subplot(4, 4, 10); ax11 = fig.add_subplot(4, 4, 11); ax12 = fig.add_subplot(4, 4, 12)\n",
@@ -454,7 +454,7 @@
     "ax13.legend(loc='upper right', fontsize=8); ax14.legend(loc='upper right', fontsize=8);  ax15.legend(loc='upper right', fontsize=8)\n",
     "ax12.set_xlabel(\"Time [sec]\"); ax13.set_xlabel(\"Time [sec]\"); ax14.set_xlabel(\"Time [sec]\"); ax15.set_xlabel(\"Time [sec]\")\n",
     "\n",
-    "# Plot\n",
+    "fig.subplots_adjust(hspace=0)\n",
     "fig.show\n",
     "if dump_mode == 1:\n",
     "    png_fname = work_dir+data_name+'_mid.png'\n",
@@ -478,7 +478,7 @@
    "source": [
     "n_sweep = n_time0 - 4\n",
     "\n",
-    "fig = plt.figure(figsize=(12, 10))\n",
+    "fig = plt.figure(figsize=(14, 11))\n",
     "ax1 = fig.add_subplot(4, 4, 1);   ax2 = fig.add_subplot(4, 4, 2);   ax3 = fig.add_subplot(4, 4, 3);   ax4 = fig.add_subplot(4, 4, 4)\n",
     "ax5 = fig.add_subplot(4, 4, 5);   ax6 = fig.add_subplot(4, 4, 6);   ax7 = fig.add_subplot(4, 4, 7);   ax8 = fig.add_subplot(4, 4, 8)\n",
     "ax9 = fig.add_subplot(4, 4, 9);   ax10 = fig.add_subplot(4, 4, 10); ax11 = fig.add_subplot(4, 4, 11); ax12 = fig.add_subplot(4, 4, 12)\n",
@@ -542,7 +542,7 @@
     "ax12.set_xlabel(\"Time [sec]\"); ax13.set_xlabel(\"Time [sec]\"); ax14.set_xlabel(\"Time [sec]\"); ax15.set_xlabel(\"Time [sec]\")\n",
     "\n",
     "\n",
-    "# Plot\n",
+    "fig.subplots_adjust(hspace=0)\n",
     "fig.show\n",
     "if dump_mode == 1:\n",
     "    png_fname = work_dir+data_name+'_last.png'\n",
@@ -567,7 +567,7 @@
     "auto_corr_2d = np.ravel(data.auto_corr)\n",
     "auto_corr_2d = auto_corr_2d.reshape(n_num, data.N_samp_AUX[0]).transpose()\n",
     "\n",
-    "fig2d = plt.figure(figsize=[12,8])\n",
+    "fig2d = plt.figure(figsize=[16,11])\n",
     "ax1 = fig2d.add_subplot(1, 1, 1); \n",
     "\n",
     "p1 = ax1.pcolormesh(num_1d, data.time, auto_corr_2d, cmap='bwr')\n",
