--- a/JUICE-CDF-HF-SID2_sp_cal.ipynb
+++ b/JUICE-CDF-HF-SID2_sp_cal.ipynb
@@ -5,7 +5,7 @@
    "id": "5ad0cc98",
    "metadata": {},
    "source": [
-    "# JUICE RPWI HF SID2 (RAW): L1a CAL -- 2024/8/17"
+    "# JUICE RPWI HF SID2 (RAW): L1a CAL -- 2024/8/18"
    ]
   },
   {
@@ -27,8 +27,8 @@
     "import csv\n",
     "import datetime\n",
     "import math\n",
-    "import matplotlib.pyplot as plt\n",
     "import matplotlib.colors as colors\n",
+    "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
     "import sys\n",
     "from scipy.signal import find_peaks"
@@ -617,6 +617,8 @@
     "xlim=[f_min+20000, f_max+20000];  ax5.set_xlim(xlim); xlim=[f_min+25000, f_max+25000];  ax6.set_xlim(xlim)\n",
     "xlim=[f_min+30000, f_max+30000];  ax7.set_xlim(xlim); xlim=[f_min+35000, f_max+35000];  ax8.set_xlim(xlim)\n",
     "xlim=[f_min+40000, f_max+40000];  ax9.set_xlim(xlim)\n",
+    "ax1.tick_params(labelsize=7); ax2.tick_params(labelsize=7); ax3.tick_params(labelsize=7); ax4.tick_params(labelsize=7); ax5.tick_params(labelsize=7)\n",
+    "ax6.tick_params(labelsize=7); ax7.tick_params(labelsize=7); ax8.tick_params(labelsize=7); ax9.tick_params(labelsize=7)\n",
     "\n",
     "# range\n",
     "ylim=[10**p_min, 10**p_max]\n",
@@ -624,7 +626,7 @@
     "ax7.set_ylim(ylim); ax8.set_ylim(ylim);  ax9.set_ylim(ylim)\n",
     "\n",
     "# Plot\n",
-    "fig.subplots_adjust(hspace=0.4)\n",
+    "fig.subplots_adjust(hspace=0.2)\n",
     "fig.show\n",
     "if dump_mode == 1:\n",
     "    png_fname = work_dir+data_name+'-cal_spec-fine.png'\n",
