--- a/JUICE-CDF-HF-SID6_sample.ipynb
+++ b/JUICE-CDF-HF-SID6_sample.ipynb
@@ -5,7 +5,7 @@
    "id": "5ad0cc98",
    "metadata": {},
    "source": [
-    "# JUICE RPWI HF SID6 (PSSR2 surv): L1a QL -- 2024/7/21"
+    "# JUICE RPWI HF SID6 (PSSR2 surv): L1a QL -- 2024/8/18"
    ]
   },
   {
@@ -238,7 +238,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fig = plt.figure(figsize=(12, 9))\n",
+    "fig = plt.figure(figsize=(14, 11))\n",
     "ax1 = fig.add_subplot(3, 1, 1);  ax2 = fig.add_subplot(3, 1, 3);  ax3 = fig.add_subplot(3, 1, 2)\n",
     "\n",
     "ax1.plot(np.ravel(data.auto_corr[:][:]), linewidth=.5, label='auto_corr')\n",
@@ -295,7 +295,7 @@
     "\n",
     "n_sweep = 0\n",
     "\n",
-    "fig = plt.figure(figsize=(12, 10))\n",
+    "fig = plt.figure(figsize=(14, 11))\n",
     "ax1  = fig.add_subplot(4, 4, 1);  ax2  = fig.add_subplot(4, 4, 2);   ax3  = fig.add_subplot(4, 4, 3);   ax4 = fig.add_subplot(4, 4, 4)\n",
     "ax5  = fig.add_subplot(4, 4, 5);  ax6  = fig.add_subplot(4, 4, 6);   ax7  = fig.add_subplot(4, 4, 7);   ax8 = fig.add_subplot(4, 4, 8)\n",
     "ax9  = fig.add_subplot(4, 4, 9);  ax10 = fig.add_subplot(4, 4, 10);  ax11 = fig.add_subplot(4, 4, 11); ax12 = fig.add_subplot(4, 4, 12)\n",
@@ -375,7 +375,7 @@
     "#\n",
     "ax1.legend(loc='upper right', fontsize=8)\n",
     "\n",
-    "# Plot\n",
+    "fig.subplots_adjust(hspace=0)\n",
     "fig.show\n",
     "if dump_mode == 1:\n",
     "    png_fname = work_dir+data_name+'_1st.png'\n",
@@ -397,7 +397,7 @@
    "source": [
     "n_sweep = np.int16(n_time0/2)\n",
     "\n",
-    "fig = plt.figure(figsize=(12, 10))\n",
+    "fig = plt.figure(figsize=(14, 11))\n",
     "ax1  = fig.add_subplot(4, 4, 1);  ax2  = fig.add_subplot(4, 4, 2);   ax3  = fig.add_subplot(4, 4, 3);   ax4 = fig.add_subplot(4, 4, 4)\n",
     "ax5  = fig.add_subplot(4, 4, 5);  ax6  = fig.add_subplot(4, 4, 6);   ax7  = fig.add_subplot(4, 4, 7);   ax8 = fig.add_subplot(4, 4, 8)\n",
     "ax9  = fig.add_subplot(4, 4, 9);  ax10 = fig.add_subplot(4, 4, 10);  ax11 = fig.add_subplot(4, 4, 11); ax12 = fig.add_subplot(4, 4, 12)\n",
@@ -477,7 +477,7 @@
     "#\n",
     "ax1.legend(loc='upper right', fontsize=8)\n",
     "\n",
-    "# Plot\n",
+    "fig.subplots_adjust(hspace=0)\n",
     "fig.show\n",
     "if dump_mode == 1:\n",
     "    png_fname = work_dir+data_name+'_mid.png'\n",
@@ -501,7 +501,7 @@
    "source": [
     "n_sweep = n_time0\n",
     "\n",
-    "fig = plt.figure(figsize=(12, 10))\n",
+    "fig = plt.figure(figsize=(14, 11))\n",
     "ax1  = fig.add_subplot(4, 4, 1);  ax2  = fig.add_subplot(4, 4, 2);   ax3  = fig.add_subplot(4, 4, 3);   ax4 = fig.add_subplot(4, 4, 4)\n",
     "ax5  = fig.add_subplot(4, 4, 5);  ax6  = fig.add_subplot(4, 4, 6);   ax7  = fig.add_subplot(4, 4, 7);   ax8 = fig.add_subplot(4, 4, 8)\n",
     "ax9  = fig.add_subplot(4, 4, 9);  ax10 = fig.add_subplot(4, 4, 10);  ax11 = fig.add_subplot(4, 4, 11); ax12 = fig.add_subplot(4, 4, 12)\n",
@@ -581,7 +581,7 @@
     "#\n",
     "ax1.legend(loc='upper right', fontsize=8)\n",
     "\n",
-    "# Plot\n",
+    "fig.subplots_adjust(hspace=0)\n",
     "fig.show\n",
     "if dump_mode == 1:\n",
     "    png_fname = work_dir+data_name+'_last.png'\n",
